# focal_plane_refactor

./: 2019_12_16_23_58_26catalog.txt  20260423_205321_Regulus_onaxis_catalog.txt  20260423_205827_Regulus_offaxis_catalog.txt  2026_04_09_22_46_18_wLEDs_catalog.txt  README.md  batch_focal_plane.sh  batch_focal_plane_high_threshold.sh  environment.yml  focal_plane_config.example.yml  focal_plane_config.yml  pyproject.toml
focal_plane_refactor_updated/: environment.yml  focal_plane_config.example.yml
focal_plane_refactor_updated/src/focal_plane_refactor/: config.py  detect.py
src/focal_plane_refactor/: __init__.py  catalog.py  cli.py  config.py  detect.py  image_io.py  models.py  psf.py
tests/: test_config.py  test_smoke.py
